--- a/css/style.css
+++ b/css/style.css
@@ -1395,7 +1395,15 @@ input:focus{
 @media(max-width: 768px) {
 
   .col-sm-12.col-md-4 {
-    max-width: 114px;
+    max-width: 100%;
+}
+.buttom-box01.row {
+    display: flex;
+    flex-direction: column;
+}
+
+.b-b01.col-xl-4.col-lg-4.col-md-4.col-sm-12.col-12 h2 {
+    font-size: 1.5rem;
 }
   .col-sm-6.col-md-4 {
     max-width: 114px;
