--- a/css/temple.css
+++ b/css/temple.css
@@ -50,7 +50,7 @@
 }
 
 .ef-img01{
-	background-image: url(../photo/ev01.jpg);
+	background-image: url(../photo/ev01.webp);
 	height: 150px;
 	background-position: center bottom ;
 	position: relative;
@@ -60,7 +60,7 @@
 
 }
 .ef-img02{
-	background-image: url(../photo/ev02.jpg);
+	background-image: url(../photo/ev02.webp);
 	height: 150px;
 	background-position: center bottom ;
 	position: relative;
@@ -70,7 +70,7 @@
 
 }
 .ef-img03{
-	background-image: url(../photo/ev03.jpg);
+	background-image: url(../photo/ev03.webp);
 	height: 150px;
 	background-position: center bottom ;
 	position: relative;
@@ -80,7 +80,7 @@
 
 }
 .ef-img04{
-	background-image: url(../photo/ev04.jpg);
+	background-image: url(../photo/ev04.webp);
 	height: 150px;
 	background-position: center bottom ;
 	position: relative;
