--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,12 @@ body{
 
 }
 
+/* Allow opening sidebar dropdowns (About / News) via click on mobile */
+.sidebar-third-a.open .sidebar-about-submenu-01,
+.sidebar-third-a.open .sidebar-about-submenu-02{
+	display: block;
+}
+
 
 .search-box{
 	width: 60%;
