--- a/css/style.css
+++ b/css/style.css
@@ -506,8 +506,11 @@ body{
 
 .mf01{
 	margin: 0 auto;
-	width: 110px;	
-	padding-bottom: 50px;
+    width: 100%;
+    padding-bottom: 50px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
 	
 }
 .mf01 a{
