--- a/css/style.css
+++ b/css/style.css
@@ -1415,3 +1415,12 @@ input:focus{
 div#google_translate_element {
     z-index: 10000;
 }
+
+
+    .tra001 {
+        padding-bottom: 50px;
+        padding-top: 200px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
