--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,10 @@ body{
 
 }
 
-
+.wel-left01.col-xl-6.col-lg-6.col-md-6.col-sm-12.col-12 {
+    display: flex;
+    align-items: center;
+}
 .welcome{
 	width: 100%;
 	
